--- a/app/src/main/res/layout/activity_non_profit.xml
+++ b/app/src/main/res/layout/activity_non_profit.xml
@@ -8,9 +8,33 @@
                 android:paddingBottom="@dimen/activity_vertical_margin"
                 tools:context="com.epicodus.breakthecode.NonProfitActivity">
 
-    <TextView
-        android:text="@string/hello_world"
+    <ImageView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:id="@+id/partnerImage"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/app_camp_for_girls"/>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="App Camp for Girls"
+        android:id="@+id/nameLabel"
+        android:layout_alignBottom="@+id/partnerImage"
+        android:layout_centerHorizontal="true"
+        android:textColor="@android:color/black"
+        android:textSize="16sp"
+        android:textStyle="bold"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="App Camp For Girls is a place where girls can put their creative powers to work, designing and building apps, while learning more about the business of software and being inspired by women mentors in the field."
+        android:id="@+id/textView3"
+        android:layout_below="@+id/nameLabel"
+        android:layout_marginTop="50dp"
+        android:layout_centerHorizontal="true"
+        android:textColor="@android:color/black"
+        android:textSize="16sp"/>
 </RelativeLayout>
